Add unit tests services